# Binary

./: .gitignore  00_Business_Logic_Bible.md  03_Markdown_Metadata_Layer.md  05_Python_API_Wrapper.md  07_Code_Compliance_Engine.md  09_Clash_Validation_Suite.md  11_Visualization_Bridge.md  12_Multi_User_Sync.md  16_Collaboration_Layer.md  NOTES_WORKFLOW_LOGIC_AUDIT.md  README.md  pyproject.toml  salas-obrien-soft-pitch-strategy.md
InitialBuild/: 01_Data_Extraction_Pipeline.md  02_Template_Library.md  04_Version_Control_Backbone.md  06_Natural_Language_Parser.md  08_Parametric_Generation.md  10_Cost_Schedule_Hooks.md  13_Fine_Tuning_Loop.md  14_Domain_Expansion.md  15_Regulatory_Auto_Update.md  17_Security_Audit.md  18_Deployment_Pipeline.md  19_Analytics_Dashboard.md
NewBuild/: Phase_01_Contractor_Procurement_Substitution_Engine.md  Phase_02_Live_As_Built_Logging_Verification.md  Phase_03_Intelligent_Digital_Twin_Handover.md  Phase_04_Zero_Install_Mobile_Field_Interface.md  Phase_05_Contractor_NL_Context_Engine.md  Phase_06_Automated_Change_Order_Generation.md  Phase_07_4D_5D_Construction_Sequencing.md  Phase_08_Cross_Party_Approval_Workflows.md  Phase_09_Legal_Grade_Audit_Chain_of_Custody.md  Phase_10_Live_Project_Intelligence_Dashboard.md  Phase_11_Post_Occupancy_Facility_Management.md  Phase_12_Continuous_Field_Driven_Fine_Tuning.md  Phase_13_Dynamic_Regional_Material_Supplier_Catalog.md  Phase_14_Embodied_Carbon_Sustainability_Analysis.md  Phase_15_Augmented_Reality_Field_Visualization.md  Phase_16_Firm_Wide_Portfolio_Multi_Project_Governance.md  Phase_17_Secure_Optional_Ecosystem_Integrations.md  Phase_18_Commercial_Packaging_Distribution.md  Phase_19_Controlled_Template_Exchange_Network.md  (+1 more)
(+192 files in other folders)
