[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aecos"
version = "0.1.0"
description = "AEC OS — AI-assisted operating system for architecture, engineering, and construction"
requires-python = ">=3.11"
dependencies = [
    "ifcopenshell>=0.8",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["aecos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
